--- a/Steam.ipynb
+++ b/Steam.ipynb
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deverloper Composition of Top Selling Games"
+    "## Developer Composition of Top Selling Games"
    ]
   },
   {
@@ -516,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we will compare the ratings of top selling indie games to that of AAA games to see if one is typically more well-received than the other. Just like before, we will be using data from all three years that Steam has provided."
+    "Next we will compare the ratings of top selling indie games to that of AAA games to see if one is typically better received than the other. Just like before, we will be using data from all three years that Steam has provided."
    ]
   },
   {
@@ -816,7 +816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparison Over Time"
+    "## Comparison over Time"
    ]
   },
   {
@@ -1046,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, let's see if indie developers focus on different genres than AAA developers. Are AAA developers focused more on a particular subset of genres than indie developers? For this analysis, the \"indie\" genre has been exluded."
+    "Lastly, let's see if indie developers focus on different genres than AAA developers. Are AAA developers focused more on a particular subset of genres than indie developers? For this analysis, the \"indie\" genre has been excluded."
    ]
   },
   {
@@ -1332,7 +1332,7 @@
    "source": [
     "We can see from the data that indie games actually make up a fairly significant portion of top selling games on Steam. They are also typically rated higher than their AAA counterparts, and offer a broader scope of playstyles as well. With this in mind, one might think that indie games may begin to increase their hold on the market. However, the ratio of indie games to AAA games has remained fairly constant in Steam's top selling games over the past three years. We explored one possible reason for this, and determined that AAA games typically have higher gross revenues than indie games, which may be a deterrent for some developers. However, this should be expected due to their ability to spend more on development and marketing. In addition, indie developers are typically smaller than AAA developers, so the revenue they earn may be relatively more than AAA developers when company size is taken into account.\n",
     "\n",
-    "So what other reasons could there be for why indie games are not overtaking the market despite superior ratings and proven success stories? Perhaps it comes down to simple preference, where a large portion of the player population may simply prefer action packed titles with high quality graphics, while a smaller portion of the population may prefer slower paced and relaxing titles. Another possibility is that AAA developers are more likely to offer microtransactions which increase gross revenue significantly, or that their games simply cost more. Ratings may also not matter as much as we may think, with the popularity of games often playing a significant role in their success, which can be affected through marketing. In addition, Steam has only begun providing this data three years ago, which is a fairly short time frame for analysis. Further anlaysis on the topic may be necessary to answer these questions."
+    "So what other reasons could there be for why indie games are not overtaking the market despite superior ratings and proven success stories? Perhaps it comes down to simple preference, where a large portion of the player population may simply prefer action packed titles with high quality graphics, while a smaller portion of the population may prefer slower paced and relaxing titles. Another possibility is that AAA developers are more likely to offer microtransactions which increase gross revenue significantly, or that their games simply cost more. Ratings may also not matter as much as we may think, with the popularity of games often playing a significant role in their success, which can be affected through marketing. In addition, Steam has only begun providing this data three years ago, which is a fairly short time frame for analysis. Further analysis on the topic may be necessary to answer these questions."
    ]
   }
  ],
